--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,52 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Медицинский колледж</title>
-<link rel="stylesheet" type="text/css" href="style/main.css">
+    <meta charset="utf-8">
+    <title>Медицинский колледж</title>
+    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <style>
+        .format {
+            text-align: right;
+        }
+    </style>
 </head>
+
 <body>
-<div id="container">
-	<div id="shapka"></div>
-	<div id="outer">
-		<div id="inner">
-			<div id="left">
-				<ul>
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="doc.html">Теоретический материал</a></li>
-					<li><a href="info.html">Расписание</a></li>
-					<li><a href="ndoc.html">Нормативная документация</a></li>
-					<li><a href="vkr.html">ВКР</a></li>
-					<li><a href="dz.html">ДЗ</a></li>
-					<li><a href="svr.html">Методические указания для СВР</a></li>
-				</ul>
-			</div><!--меню-->
-			<div id="center">
-			<img src="images/1.jpg"> 
-			</div>
-			
-			
-			<div id="end"></div>
-		</div>	
-	</div>
-	<div id="footer"></div>
-</div>
+    <div id="container">
+        <div id="shapka"></div>
+        <div id="outer">
+            <div id="inner">
+                <div id="left">
+                    <ul>
+                        <li><a href="index.html">Главная</a></li>
+                        <li><a href="doc.html">Теоретический материал</a></li>
+                        <li><a href="info.html">Расписание</a></li>
+                        <li><a href="ndoc.html">Нормативная документация</a></li>
+                        <li><a href="vkr.html">ВКР</a></li>
+                        <li><a href="dz.html">ДЗ</a></li>
+                        <li><a href="svr.html">Методические указания для СВР</a></li>
+                    </ul>
+                </div>
+                <!--меню-->
+                <div id="center" class="format">
+                    <p><b>Добро пожаловать</b> на сайт преподавателей Самохиной Е.А. и Зотьевой Ю.В
+                    </p>
+                    <p>
+                        Наш сайт создан для студентов, здесь вы найдете много полезной информации.
+                    </p>
+                    <p>
+                        Данный ресурс поможет вам в повторении и обобщении теоретического материала, будет полезен в формировании профессиональных знаний, понадобится для освоения общих и профессиональных компетенций по избранной специальности.
+                    </p>
+                    <img src="images/1.jpg">
+                </div>
+
+
+                <div id="end"></div>
+            </div>
+        </div>
+        <div id="footer"></div>
+    </div>
 </body>
+
 </html>
