--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <!--меню-->
                 <div id="center" class="format">
-                    <p><b>Добро пожаловать</b> на сайт преподавателей Самохиной Е.А. и Зотьевой Ю.В
+                    <p><b>Добро пожаловать</b> на сайт преподавателей Самохиной Е.А. и Зотьевой Ю.В.
                     </p>
                     <p>
                         Наш сайт создан для студентов, здесь вы найдете много полезной информации.
