--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,13 @@
                     </ul>
                 </div>
                 <!--меню-->
-                <div id="center" class="format">
-                    <p><b>Добро пожаловать</b> на сайт преподавателей Самохиной Е.А. и Зотьевой Ю.В.
+                <div id="center">
+                    <p style="font-size:13pt;text-align:left;"><b>Добро пожаловать</b> на сайт преподавателей Самохиной Е.А. и Зотьевой Ю.В.
                     </p>
-                    <p>
+                    <p style="font-size:13pt;text-align:left;">
                         Наш сайт создан для студентов, здесь вы найдете много полезной информации.
                     </p>
-                    <p>
+                    <p style="font-size:13pt; text-align:left;">
                         Данный ресурс поможет вам в повторении и обобщении теоретического материала, будет полезен в формировании профессиональных знаний, понадобится для освоения общих и профессиональных компетенций по избранной специальности.
                     </p>
                     <img src="images/1.jpg">
