--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,9 @@
                     <p style="font-size:13pt; text-align:left;">
                         Данный ресурс поможет вам в повторении и обобщении теоретического материала, будет полезен в формировании профессиональных знаний, понадобится для освоения общих и профессиональных компетенций по избранной специальности.
                     </p>
-                    <img src="images/1.jpg">
+                    <p style="text-align: center;">
+                        <img src="images/1.jpg" style="border: 40px;">
+                    </p>
                 </div>
 
 
