add new material

--- a/src/doc.html
+++ b/src/doc.html
@@ -14,7 +14,7 @@
 				<ul>
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="doc.html">Теоретический материал</a></li>
-					<li><a href="info.html">Расписание</a></li>
+					<!-- <li><a href="info.html">Расписание</a></li> -->
 					<li><a href="ndoc.html">Нормативная документация</a></li>
 					<li><a href="vkr.html">ВКР</a></li>
 					<li><a href="dz.html">ДЗ</a></li>
@@ -25,7 +25,7 @@
 				<div height="100%">
 				
 				
-					<p>Лекции</p> 
+					<p>3 курс: Лекции. СД в акушерстве и гинекологии </p> 
 					<ul style="list-style: square">
 						<li><a href="lec/doc1.html" target="_blank">Лекция 1</a></li>
 						<li><a href="lec/doc2.html" target="_blank">Лекция 2</a></li>
@@ -38,7 +38,9 @@
 						<li><a href="lec/doc9.html" target="_blank">Лекция 9</a></li>
 						<li><a href="lec/doc10.html" target="_blank">Лекция 10</a></li>
 					</ul>
-					<p>Презентации к лекциям</p> 
+
+
+					<p>3 курс: Презентации к лекциям СД в акушерстве и гинекологии </p> 
 					<ul style="list-style: square">
 						<li><a title="pr1" href="lec/pr1.pptx" target="_blank">Презентация 1</a></li>
 						<li><a title="pr2" href="lec/pr2.pptx" target="_blank">Презентация 2</a></li>
@@ -51,6 +53,22 @@
 						<li><a title="pr9" href="lec/pr9.pptx" target="_blank">Презентация 9</a></li>
 						<li><a title="pr10" href="lec/pr10.pptx" target="_blank">Презентация 10</a></li>
 					</ul>
+
+					<p>4 курс: Лекции. СД в хурургии </p> 
+					<ul style="list-style: square">
+						<li><a href="lec/surgery/doc1.html" target="_blank">Лекция 1</a></li>
+						<li><a href="lec/surgery/doc2.html" target="_blank">Лекция 2</a></li>
+						<li><a href="lec/surgery/doc3.html" target="_blank">Лекция 3</a></li>
+						<li><a href="lec/surgery/doc4.html" target="_blank">Лекция 4</a></li>
+						<li><a href="lec/surgery/doc5.html" target="_blank">Лекция 5</a></li>
+						<li><a href="lec/surgery/doc6.html" target="_blank">Лекция 6</a></li>
+						<li><a href="lec/surgery/doc7.html" target="_blank">Лекция 7</a></li>
+						<li><a href="lec/surgery/doc8.html" target="_blank">Лекция 8</a></li>
+						<li><a href="lec/surgery/doc9.html" target="_blank">Лекция 9</a></li>
+						<li><a href="lec/surgery/doc10.html" target="_blank">Лекция 10</a></li>
+					</ul>
+
+					<br>
 				</div>
 			</div>
 			<div id="end"></div>
