--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li><a href="index.html">Главная</a></li>
                         <li><a href="doc.html">Теоретический материал</a></li>
-                        <li><a href="info.html">Расписание</a></li>
+                        <!-- <li><a href="info.html">Расписание</a></li> -->
                         <li><a href="ndoc.html">Нормативная документация</a></li>
                         <li><a href="vkr.html">ВКР</a></li>
                         <li><a href="dz.html">ДЗ</a></li>
@@ -31,13 +31,14 @@
                 <!--меню-->
                 <div id="center">
                     <br>
-                    <p style="font-size:13pt;text-align:left;"><b>Добро пожаловать</b> на сайт преподавателей Самохиной Е.А. и Зотьевой Ю.В.
+                    <p style="font-size:13pt;text-align:left;"><b>Добро пожаловать</b> на персональный сайт преподавателя Самохиной Е.А.
                     </p>
+                    
                     <p style="font-size:13pt;text-align:left;">
-                        Наш сайт создан для студентов, здесь вы найдете много полезной информации.
+                        Мой сайт создан для студентов медицинского колледжа. Буду рада, если Вы на страницах  данного сайта найдёте для себя интересное и полезное.
                     </p>
                     <p style="font-size:13pt; text-align:left;">
-                        Данный ресурс поможет вам в повторении и обобщении теоретического материала, будет полезен в формировании профессиональных знаний, понадобится для освоения общих и профессиональных компетенций по избранной специальности.
+                        Данный ресурс поможет Вам в повторении и обобщении теоретического материала, будет полезен в формировании профессиональных знаний, понадобится для освоения общих и профессиональных компетенций по избранной специальности.
                     </p>
                     <br>
                     <p style="text-align: center;">
