--- a/src/ndoc.html
+++ b/src/ndoc.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="doc.html">Теоретический материал</a></li>
-					<li><a href="info.html">Расписание</a></li>
+					<!-- <li><a href="info.html">Расписание</a></li> -->
 					<li><a href="ndoc.html">Нормативная документация</a></li>
 					<li><a href="vkr.html">ВКР</a></li>
 					<li><a href="dz.html">ДЗ</a></li>
@@ -26,16 +26,21 @@
 				<div height="100%">
 				<p>Нормативная документация</p>
 					<ul style="list-style: square">
+							<li><a href="ndoc/doc2.html" target="_blank"> Аудит критических состояний в акушерской практике РФ</a></li>
+							<li><a href="ndoc/doc3.html" target="_blank">МР перчатки</a></li>
+							<li><a href="ndoc/doc5.html" target="_blank">СанПиН 2.1.7.2790-10</a></li>
+							<li><a href="ndoc/doc6.html" target="_blank">СанПиН 2.1.3.2630-10</a></li>
+							<li><a href="ndoc/doc4.html" target="_blank">Приказ №425</a></li>
 							<li><a href="ndoc/doc1.html" target="_blank">Приказ №572</a></li>
-							<li><a href="ndoc/doc2.html" target="_blank"> ГОСТ Р 52623.0-2006 Технологиивыполнения простых медицинскихуслуг. Общие положения</a></li>
-							<li><a href="ndoc/doc3.html" target="_blank">О совершенствовании оказания доврачебной медицинской помощи при неотложных состояниях</a></li>
-							<li><a href="ndoc/doc4.html" target="_blank">Технологии выполнения простых медицинских услуг</a></li>
-							<li><a href="ndoc/doc5.html" target="_blank">"Протокол ведения больных. Пролежни</a></li>
-							<li><a href="ndoc/doc6.html" target="_blank">СанПиН 3.1.5 2826-10</a></li>
-							<li><a href="ndoc/doc7.html" target="_blank">СанПиН 2.1.3.2630-10</a></li>
-							<li><a href="ndoc/doc8.html" target="_blank">СанПиН 2.1.7.2790-10</a></li>
-							<li><a href="ndoc/doc9.html" target="_blank">Методические указания МУ 3.1.2313-08 </a></li>
-						
+							<li><a href="ndoc/doc7.html" target="_blank">Приказ №706</a></li>
+							<li><a href="ndoc/doc8.html" target="_blank">Приказ №834</a></li>
+							<li><a href="ndoc/doc9.html" target="_blank">Приказ №543</a></li>
+							<li><a href="ndoc/doc10.html" target="_blank">Приказ №125</a></li>
+							<li><a href="ndoc/doc11.html" target="_blank">Приказ №2571</a></li>
+							<li><a href="ndoc/doc12.html" target="_blank">Приказ №646</a></li>
+							<li><a href="ndoc/doc13.html" target="_blank">Стандарт. ТЕХНОЛОГИИ ВЫПОЛНЕНИЯ ПРОСТЫХ МЕДИЦИНСКИХ УСЛУГ ИНВАЗИВНЫХ ВМЕШАТЕЛЬСТВ</a></li>
+							<li><a href="ndoc/doc14.html" target="_blank">Стандарт. Технологии выполнения простых медицинских услуг МАНИПУЛЯЦИИ СЕСТРИНСКОГО УХОДА</a></li>
+
 						</ul>
 				</div>
 			</div>
