--- a/src/svr.html
+++ b/src/svr.html
@@ -14,7 +14,7 @@
 				<ul>
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="doc.html">Теоретический материал</a></li>
-					<li><a href="info.html">Расписание</a></li>
+					<!-- <li><a href="info.html">Расписание</a></li> -->
 					<li><a href="ndoc.html">Нормативная документация</a></li>
 					<li><a href="vkr.html">ВКР</a></li>
 					<li><a href="dz.html">ДЗ</a></li>
@@ -25,7 +25,11 @@
 				<div height="100%">
 					<ul style="list-style: square">
 						<p>Методические указания для СВР</p>
-							<li><a href="svr/doc1.html" target="_blank">Рабочая тетрадь для самостоятельной внеаудиторной работы</a></li>
+							<li><a href="svr/doc1.html" target="_blank">3 курс: Рабочая тетрадь МДК.02.01 Сестринский уход в хирургии. Часть 1 </a></li>
+							<li><a href="svr/doc2.html" target="_blank">3 курс: Рабочая тетрадь МДК.02.01 Сестринский уход в хирургии. Часть 2</a></li>
+							<li><a href="svr/doc3.html" target="_blank">3 курс: Рабочая тетрадь МДК.02.01 Сестринский уход в акушерстве и гинекологии</a></li>
+							<li><a href="svr/doc4.html" target="_blank">4 курс: Рабочая тетрадь МДК.02.01 Сестринский уход в хирургии.</a></li>
+
 					</ul>
 				</div>
 			</div>
