--- a/src/dz.html
+++ b/src/dz.html
@@ -14,18 +14,22 @@
 				<ul>
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="doc.html">Теоретический материал</a></li>
-					<li><a href="info.html">Расписание</a></li>
+					<!-- <li><a href="info.html">Расписание</a></li> -->
 					<li><a href="ndoc.html">Нормативная документация</a></li>
 					<li><a href="vkr.html">ВКР</a></li>
 					<li><a href="dz.html">ДЗ</a></li>
 					<li><a href="svr.html">Методические указания для СВР</a></li>
 				</ul>
+
 			</div><!--меню-->
 			<div id="center">
 				<div height="100%">
 					<ul style="list-style: square">
 					<p>Домашнее задание</p>
-							<li><a href="dz/doc1.html" target="_blank">ДЗ для студентов</a></li>
+							<li><a href="dz/doc1.html" target="_blank">3 курс: СД в акушерстве и генекологии</a></li>
+							<li><a href="dz/doc2.html" target="_blank">3 курс: СД в хирургии</a></li>
+							<li><a href="dz/doc3.html" target="_blank">4 курс: СД в хирургии</a></li>
+
 						</ul>
 				</div>
 			</div>
