--- a/src/info.html
+++ b/src/info.html
@@ -27,7 +27,7 @@
                 <div id="center">
                     <div>
                         <p>Расписание</p>
-                        <!-- <img src="images/rasp1.jpg"> -->
+                        <img src="images/rasp1.jpg">
                     </div>
                 </div>
                 <div id="end"></div>
