--- a/src/vkr.html
+++ b/src/vkr.html
@@ -14,7 +14,7 @@
 				<ul>
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="doc.html">Теоретический материал</a></li>
-					<li><a href="info.html">Расписание</a></li>
+					<!-- <li><a href="info.html">Расписание</a></li> -->
 					<li><a href="ndoc.html">Нормативная документация</a></li>
 					<li><a href="vkr.html">ВКР</a></li>
 					<li><a href="dz.html">ДЗ</a></li>
@@ -25,11 +25,10 @@
 				<div height="100%">
 				<p>Выпускная Квалификационная Работа</p>
 					<ul style="list-style: square">
-							<li><a href="vkr/doc1.html" target="_blank">ВМК Методические рекомендации по подготовке и защите ВКР (2013 г.)</a></li>
-							<li><a href="vkr/doc2.html" target="_blank">ВМК Положение о ВКР студентов_09.12.2013</a></li>
-							<li><a href="vkr/doc3.html" target="_blank">ВМК Примеры библиографического описания для выполнения  ВКР</a></li>
+							<li><a href="vkr/doc1.html" target="_blank">ВМК Методические рекомендации по подготовке и защите ВКР (2016 г.)</a></li>
+							<!-- <li><a href="vkr/doc3.html" target="_blank">ВМК Примеры библиографического описания для выполнения  ВКР</a></li>
 							<li><a href="vkr/doc4.html" target="_blank">Пример ВКР</a></li>
-							
+							 -->
 						</ul>
 				</div>
 			</div>
